--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="controller.HomeController">
    <children>
-      <Label text="Test" />
+      <Label fx:id="label" text="Test" />
    </children>
 </AnchorPane>
