--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="552.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
+<AnchorPane fx:id="Root" prefHeight="552.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
       <Label fx:id="label" layoutX="41.0" layoutY="9.0" />
       <Button id="SearchB" fx:id="searchB" layoutX="536.0" layoutY="49.0" mnemonicParsing="false" onAction="#clickSearch" text="Search" textOverrun="CLIP">
@@ -25,46 +26,53 @@
             <Font name="Arial" size="24.0" />
          </font>
       </Label>
-      <ImageView fx:id="image1" fitHeight="58.0" fitWidth="29.0" layoutX="34.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/apple_by_grv422-d5554a4.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="iamge2" fitHeight="19.0" fitWidth="21.0" layoutX="481.0" layoutY="25.0" pickOnBounds="true">
-         <image>
-            <Image url="@../../images/Banana21.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="image3" fitHeight="32.0" fitWidth="44.0" layoutX="629.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/kiwi.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="image4" fitHeight="32.0" fitWidth="21.0" layoutX="89.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/mango-1.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="image5" fitHeight="25.0" fitWidth="44.0" layoutX="674.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/Orange-Fruit-Pieces.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="image6" fitHeight="39.0" fitWidth="29.0" layoutX="659.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/watermelon-ogr-2.jpg" />
-         </image>
-      </ImageView>
-      <GridPane fx:id="ImagePane" gridLinesVisible="true" layoutX="9.0" layoutY="100.0" prefHeight="360.0" prefWidth="728.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
+      <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" layoutX="28.0" layoutY="92.0" prefHeight="368.0" prefWidth="690.0" vbarPolicy="ALWAYS">
+         <content>
+            <GridPane fx:id="GridPane" prefHeight="365.0" prefWidth="678.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fx:id="iamge2" fitHeight="107.0" fitWidth="112.0" pickOnBounds="true">
+                     <image>
+                        <Image url="@../../images/Banana21.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="image1" fitHeight="60.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                     <image>
+                        <Image url="@../../images/apple_by_grv422-d5554a4.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="image4" fitHeight="60.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../../images/mango-1.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="image3" fitHeight="87.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../../images/kiwi.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="image5" fitHeight="86.0" fitWidth="262.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@../../images/Orange-Fruit-Pieces.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="image6" fitHeight="94.0" fitWidth="215.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@../../images/watermelon-ogr-2.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
