--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -14,7 +14,6 @@
 
 <AnchorPane fx:id="Root" prefHeight="552.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
-      <Label fx:id="label" layoutX="41.0" layoutY="9.0" />
       <Button id="SearchB" fx:id="searchB" layoutX="536.0" layoutY="49.0" mnemonicParsing="false" onAction="#clickSearch" text="Search" textOverrun="CLIP">
          <font>
             <Font name="Arial Black" size="14.0" />
@@ -28,7 +27,7 @@
       </Label>
       <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" layoutX="28.0" layoutY="92.0" prefHeight="368.0" prefWidth="690.0" vbarPolicy="ALWAYS">
          <content>
-            <GridPane fx:id="GridPane" prefHeight="365.0" prefWidth="678.0">
+            <GridPane fx:id="GridPane" prefHeight="700.0" prefWidth="678.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,6 +37,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <ImageView fx:id="iamge2" fitHeight="107.0" fitWidth="112.0" pickOnBounds="true">
