--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -27,7 +27,7 @@
       </Label>
       <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" layoutX="28.0" layoutY="92.0" prefHeight="368.0" prefWidth="690.0" vbarPolicy="ALWAYS">
          <content>
-            <GridPane fx:id="GridPane" prefHeight="700.0" prefWidth="678.0">
+            <GridPane fx:id="GridPane" prefHeight="481.0" prefWidth="678.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,8 +38,6 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <ImageView fx:id="iamge2" fitHeight="107.0" fitWidth="112.0" pickOnBounds="true">
@@ -47,7 +45,7 @@
                         <Image url="@../../images/Banana21.jpg" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="image1" fitHeight="60.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                  <ImageView fx:id="image1" fitWidth="87.0" pickOnBounds="true" preserveRatio="true" style="-fx-scale-x: 1;" GridPane.columnIndex="1">
                      <image>
                         <Image url="@../../images/apple_by_grv422-d5554a4.jpg" />
                      </image>
