--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="controller.LoginController">
    <children>
       <Pane layoutX="-23.0" layoutY="-36.0" prefHeight="336.0" prefWidth="532.0">
          <children>
