--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -7,58 +7,83 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Root" prefHeight="552.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
+<AnchorPane fx:id="Root" prefHeight="547.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
-      <Button id="SearchB" fx:id="searchB" layoutX="536.0" layoutY="49.0" mnemonicParsing="false" onAction="#clickSearch" text="Search" textOverrun="CLIP">
-         <font>
-            <Font name="Arial Black" size="14.0" />
-         </font>
-      </Button>
-      <TextField fx:id="searchBar" layoutX="164.0" layoutY="53.0" prefHeight="25.0" prefWidth="369.0" promptText="Type something to search..." />
-      <Label layoutX="185.0" layoutY="460.0" prefHeight="51.0" prefWidth="360.0" text="DRAG AND DROP FILES HERE" textFill="#b5b5b5ae">
-         <font>
-            <Font name="Arial" size="24.0" />
-         </font>
-      </Label>
-      <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" layoutX="28.0" layoutY="92.0" prefHeight="368.0" prefWidth="690.0" vbarPolicy="ALWAYS">
-         <content>
-            <FlowPane fx:id="FlowPane" prefHeight="366.0" prefWidth="677.0" style="-fx-background-color: RED;">
+      <GridPane fx:id="mainGrid" layoutY="-14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="746.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="180.0" minHeight="9.0" prefHeight="87.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="370.0" vgrow="ALWAYS" />
+          <RowConstraints maxHeight="130.0" minHeight="0.0" prefHeight="100.0" vgrow="NEVER" />
+        </rowConstraints>
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;" GridPane.vgrow="NEVER">
                <children>
-                  <ImageView fx:id="iamge2" fitHeight="107.0" fitWidth="112.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../../images/Banana21.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="image6" fitHeight="94.0" fitWidth="215.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/watermelon-ogr-2.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="image1" fitWidth="87.0" pickOnBounds="true" preserveRatio="true" style="-fx-scale-x: 1;">
-                     <image>
-                        <Image url="@../../images/apple_by_grv422-d5554a4.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="image4" fitHeight="60.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/mango-1.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="image3" fitHeight="87.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/kiwi.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="image5" fitHeight="86.0" fitWidth="262.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/Orange-Fruit-Pieces.jpg" />
-                     </image>
-                  </ImageView>
-               </children></FlowPane>
-         </content>
-      </ScrollPane>
+                  <TextField fx:id="searchBar" layoutX="9.0" layoutY="37.0" prefHeight="25.0" prefWidth="635.0" promptText="Type something to search..." />
+                  <Button id="SearchB" fx:id="searchB" layoutX="658.0" layoutY="34.0" mnemonicParsing="false" onAction="#clickSearch" text="Search" textOverrun="CLIP">
+                     <font>
+                        <Font name="Arial Black" size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
+            <Pane prefHeight="289.0" prefWidth="746.0" style="-fx-background-color: BLUE;" GridPane.rowIndex="2" GridPane.vgrow="NEVER">
+               <children>
+                  <Label layoutX="198.0" layoutY="38.0" snapToPixel="false" text="DRAG AND DROP FILES HERE" textFill="#b5b5b5ae">
+                     <font>
+                        <Font name="Arial" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" prefHeight="318.0" prefWidth="746.0" style="-fx-scale-shape: true;" vbarPolicy="ALWAYS" GridPane.rowIndex="1">
+               <content>
+                  <FlowPane fx:id="FlowPane" prefHeight="374.0" prefWidth="729.0" style="-fx-background-color: RED;">
+                     <children>
+                        <ImageView fx:id="iamge2" fitHeight="107.0" fitWidth="112.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../../images/Banana21.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="image6" fitHeight="94.0" fitWidth="215.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/watermelon-ogr-2.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="image1" fitWidth="87.0" pickOnBounds="true" preserveRatio="true" style="-fx-scale-x: 1;">
+                           <image>
+                              <Image url="@../../images/apple_by_grv422-d5554a4.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="image4" fitHeight="60.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/mango-1.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="image3" fitHeight="87.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/kiwi.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="image5" fitHeight="86.0" fitWidth="262.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/Orange-Fruit-Pieces.jpg" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </FlowPane>
+               </content>
+            </ScrollPane>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
