--- a/src/view/NewUser.fxml
+++ b/src/view/NewUser.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="controller.newUserController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="controller.NewUserController">
    <children>
       <Pane layoutX="-23.0" layoutY="-14.0" prefHeight="333.0" prefWidth="330.0">
          <children>
