--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -1,23 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: radial-gradient( focus-angle 0.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 125.0%, rgb(255,255,255) 0.0, rgba(82,149,180,0.5058823823928833) 100.0 );" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
-      <Pane layoutX="-23.0" layoutY="-36.0" prefHeight="336.0" prefWidth="532.0">
+      <HBox alignment="CENTER" layoutX="6.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="-6.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField fx:id="usernameField" layoutX="101.0" layoutY="163.0" promptText="Username" />
-            <Hyperlink fx:id="newAccB" layoutX="101.0" layoutY="233.0" onAction="#newAccBPress" text="Make new account" />
-            <Hyperlink fx:id="forgotPassB" layoutX="101.0" layoutY="256.0" onAction="#forgotPassBPress" text="Forgot Password" />
-            <Button fx:id="logInB" layoutX="266.0" layoutY="196.0" mnemonicParsing="false" onAction="#logInPress" text="Log In" />
-            <PasswordField fx:id="passwordField" layoutX="101.0" layoutY="196.0" promptText="Password" />
+            <ImageView fitHeight="265.0" fitWidth="291.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../logo.png" />
+               </image>
+            </ImageView>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <TextField fx:id="usernameField" promptText="Username">
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin></TextField>
+                  <PasswordField fx:id="passwordField" promptText="Password">
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin></PasswordField>
+                  <Button fx:id="logInB" minWidth="69.0" mnemonicParsing="false" onAction="#logInPress" prefHeight="25.0" prefWidth="69.0" text="Log In">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="15.0" left="100.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Hyperlink fx:id="newAccB" onAction="#newAccBPress" text="Make new account">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin></Hyperlink>
+                  <Hyperlink fx:id="forgotPassB" onAction="#forgotPassBPress" text="Forgot Password" />
+               </children>
+            </VBox>
          </children>
-      </Pane>
+      </HBox>
    </children>
 </AnchorPane>
