--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -32,7 +32,7 @@
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin></PasswordField>
-                  <Button fx:id="logInB" minWidth="69.0" mnemonicParsing="false" onAction="#logInPress" prefHeight="25.0" prefWidth="69.0" text="Log In">
+                  <Button fx:id="logInB" minWidth="69.0" mnemonicParsing="false" onAction="#logInPress" prefHeight="25.0" prefWidth="69.0" style="-fx-cursor: hand;" text="Log In">
                      <effect>
                         <DropShadow />
                      </effect>
