--- a/src/view/background.css
+++ b/src/view/background.css
@@ -2,3 +2,6 @@
 	-fx-background-color: radial-gradient( focus-angle 0.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 125.0%, rgb(255,255,255) 0.0, rgba(82,149,180,0.5058823823928833) 100.0 )
 	
 }
+#logInB{
+	-fx-cursor:hand 		
+}
