--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Root" prefHeight="602.0" prefWidth="800.0" style="-fx-background-color: radial-gradient( focus-angle 0.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 125.0%, rgb(255,255,255) 0.0, rgba(82,149,180,0.5058823823928833) 100.0 );" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
+<AnchorPane fx:id="Root" prefHeight="602.0" prefWidth="800.0" style="-fx-background-color: radial-gradient( focus-angle 0.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 125.0%, rgb(255,255,255) 0.0, rgba(82,149,180,0.5058823823928833) 100.0 );" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
       <GridPane fx:id="mainGrid" layoutY="-14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="746.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -34,7 +26,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                <children>
-                  <TextField fx:id="searchBar" prefHeight="25.0" prefWidth="635.0" promptText="Type something to search..." />
+                  <TextField fx:id="searchBar" onKeyPressed="#search" prefHeight="25.0" prefWidth="635.0" promptText="Type something to search..." />
                   <Button id="SearchB" fx:id="searchB" mnemonicParsing="false" onAction="#clickSearch" text="Search" textOverrun="CLIP">
                      <font>
                         <Font name="Arial Black" size="14.0" />
@@ -51,7 +43,7 @@
                   </Label>
                </children>
             </HBox>
-            <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" prefHeight="318.0" prefWidth="746.0" style="-fx-scale-shape: true;" styleClass="edge-to-edge" vbarPolicy="ALWAYS" GridPane.rowIndex="1">
+            <ScrollPane fx:id="ScrollPane" hbarPolicy="NEVER" prefHeight="318.0" prefWidth="746.0" style="-fx-scale-shape: true; -fx-background-color: radial-gradient( focus-angle 0.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 125.0%, rgb(255,255,255) 0.0, rgba(82,149,180,0.5058823823928833) 100.0 );" styleClass="edge-to-edge" vbarPolicy="ALWAYS" GridPane.rowIndex="1">
                <content>
                   <FlowPane fx:id="flowPane" prefHeight="200.0" prefWidth="200.0" />
                </content>
